# hastane_analiz

./: .env  .gitignore  pyproject.toml
hastane_analiz/: acil_kural_def.csv
hastane_analiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hastane_analiz/config/: kural listesi.xlsx  settings.py  valid_acil.xlsx  valid_ratio.xlsx  valid_rules.xlsx
hastane_analiz/dashboard/: dashboard_acil.py  dashboard_dogum.py  dashboard_etl_validation.py
hastane_analiz/db/: connection.py
hastane_analiz/etl/: category_registry.py  excel_reader.py  loaders.py  loaders_birim_def.py  ratio_rules.py  runner.py  schema_registry.py  transformer_registry.py  validation.py
hastane_analiz/etl/transformers/: _common.py  acil.py  dogum.py  duzenleyen.py  duzenleyen_dim.py  transform_utils.py  wide_to_long.py
hastane_analiz/scripts/: load_acil_rules.py  load_ratio_rules.py  load_rules_from_excel.py  run_dim_duzenleyen.py  run_etl.py  test_db_connection.py
hastane_analiz/validation/: promote_to_fact.py  yearly_outliers.py
